[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/Traps/SpikeDude.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Traps/SpikeDude.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Spikedude_path/Spikedude_PathFollow2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "SpikeDude_move"
length = 3.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Spikedude_path/Spikedude_PathFollow2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 164, -4, 0, 0, 0, 0, 286, -4, 0, 0, 0, 0, 351, -5, 0, 0, 0, 0, 223, -3, 0, 0, 0, 0, 95, -4, 0, 0, 0, 0, -1, -2, 0, 0, 0, 0, 255, -98, 0, 0, 0, 0, 183, -45, 0, 0, 0, 0, 299, -49, 0, 0, 0, 0, 351, -6 )
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 21.1034, 21.4286 )

[node name="SpikeDude" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.4
anims/RESET = SubResource( 2 )
anims/SpikeDude_move = SubResource( 3 )

[node name="Spikedude_path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="Spikedude_PathFollow2D" type="PathFollow2D" parent="Spikedude_path"]
position = Vector2( 0, -1 )
rotation = -0.0182907

[node name="Sprite" type="Sprite" parent="Spikedude_path/Spikedude_PathFollow2D"]
position = Vector2( 1.90735e-06, -3.8147e-06 )
scale = Vector2( 1.61111, 1.75 )
texture = ExtResource( 1 )
hframes = 4
frame = 1

[node name="Area2D" type="Area2D" parent="Spikedude_path/Spikedude_PathFollow2D/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spikedude_path/Spikedude_PathFollow2D/Sprite/Area2D"]
position = Vector2( 0.620689, 0.285715 )
scale = Vector2( 0.999999, 1 )
shape = SubResource( 4 )

[connection signal="body_entered" from="Spikedude_path/Spikedude_PathFollow2D/Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
